--- a/src/components/custom-generator/custom-generator.scss
+++ b/src/components/custom-generator/custom-generator.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import '../../common/styles/variables.scss';
 
 .custom-generator {
     &__base {
@@ -6,7 +6,7 @@
         width: 99.99%;
         min-width: $tablet;
         height: 600px;
-        margin: $baseline*3 auto;
+        margin: auto;
         padding: $baseline*3;
         box-sizing: border-box;
 
