OCFE-p5-05-IMPLEMENTED-Handlebars-templating-language

--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title></title>
-    <meta name="description" content=""
-  <link href="styles.df1bdfcf863d3754a08b.css" rel="stylesheet"></head>
+    <title>{{htmlWebpackPlugin.options.Title}}</title>
+    <meta name="description" content="{{htmlWebpackPlugin.options.descriptions}}"
+  </head>
 
   <body class="page__base">
     <h1 class="page__title">Quote Generator</h1>
@@ -81,5 +81,5 @@
       </button>
       <div class="custom-generator__quotes"></div>
     </div>
-  <script src="bundle.58916222e13af942458f.js"></script></body>
+  </body>
 </html>
